# pkgconfig

./: BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  extensions.bzl
.bcr/: config.yml  metadata.template.json
.github/workflows/: release.yaml  release_prep.sh
docs/: BUILD.bazel  extensions.md
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
