"Bazel dependencies"

module(
    name = "pkgconfig",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "package_metadata", version = "0.0.2")

bazel_dep(name = "gazelle", version = "0.35.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)

bazel_dep(name = "aspect_bazel_lib", version = "2.19.1")

bazel_dep(name = "buildifier_prebuilt", version = "6.1.2", dev_dependency = True)

pkgconfig = use_extension("//:extensions.bzl", "pkgconfig")
pkgconfig.setup(
    isolate = True,
    # pkg-config --variable pc_path pkg-config to get list of paths
    # ordering of the paths matter similar to PATH.
    paths = [
        "/opt/homebrew/lib/pkgconfig",
        "/opt/homebrew/share/pkgconfig",
        "/usr/local/lib/pkgconfig",
        "/usr/lib/pkgconfig",
        "/opt/homebrew/Library/Homebrew/os/mac/pkgconfig/14",
    ],
)
pkgconfig.lib(name = "libmagic")
pkgconfig.lib(name = "ncurses")
use_repo(pkgconfig, "libmagic", "ncurses")
